# elfi

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT.md  GEMINI.md  Makefile  PROJECT_README.md  README.md  ROADMAP.md  assitant-setup.sh  justfile  mcp.json  setup-env.sh  setup-mcp.sh  validate-mcp.js
core/: Cargo.toml
docs/: 01-motivation.md  02-data_modeling.md  03-storage_sync.md  04-weave.md  05-tangle.md  06-interpreter.md  Cargo.toml  README.md  book.toml  elfi_documentation.md  justfile  merge_markdown.sh
docs/src/: 01-motivation.md  02-data_modeling.md  02-quickstart.md  03-cheatsheet.md  04-weave.md  05-tangle.md  06-interpreter.md  SUMMARY.md  api-reference.md  example.elf.md
docs/src/designs/: 01-data_modeling.md  02-data_modeling.md  02-storage_sync.md  03-storage_sync.md  03-weave.md  04-tangle.md  05-interpreter.md  06-extension.md
docs/src/implementations/: 00-architecture-redesign.md  00-overview-redesign.md  00-overview.md  01-elf_spec.md  01-parser_and_format.md  02-core_logic-redesign.md  02-core_logic.md  02-data_model.md  02-types-api.md  03-cli-redesign.md  03-cli.md  03-core.md  04-linking_and_transclusion.md  04-recipe-engine-redesign.md  04-weave.md  05-tangle.md  06-wrapper.md  07-extension.md  08-extension-install.md  elf_spec.md
docs/src/usecases/: 00-overview.md  01-bootstrapping.md  02-conversation-as-document.md  03-document-as-app.md  04-generate-js-interface.elf  04-generate-js-interface.md  component.elf  conversation.elf  elfi-dev.elf  main.elf
extension/: Cargo.toml
parser/: Cargo.toml
plans/: 01-overview.md  02-sop.md  03-dependencies.md  04-phase1-a-types.md  04-phase1-b-parser.md  04-phase1-c-core.md  05-phase2-a-storage.md  (+15 more)
(+34 files in other folders)
